# leaner

./: .gitignore  README.md  license.txt  setup.cfg
data/: solar_fusion_reacions.h5
input/: fit_params.py
notes/: .gitignore  def.tex  preamble.tex  sf_bayes_model_avg.tex  sf_refs.bib
src/fitter/: fit_manager.py  fit_sf_reactions.py  leaner.py  load_data.py  plotting.py  sf_fit_functions.py
