[metadata]
name = solar_fusion_reactions
version = 0.0.1
author = @walkloud
author_email = walkloud@lbl.gov
description = Bayesian Analysis of nuclear reactions relevant to Solar Fusion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/walkloud/solar_fusion_reactions
project_urls =
    Bug Tracker = https://github.com/walkloud/solar_fusion_reactions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    h5py
    tables
    gvar
    lsqfit

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fit_sf_reactions = fitter.fit_sf_reactions:main
