[metadata]
name = leaner
version = 0.1.1
author = @walkloud
author_email = walkloud@lbl.gov
description = Low Energy Analysis of NuclEar Reactions (LEANER)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nrp-g/leaner
project_urls =
    Bug Tracker = https://github.com/nrp-g/leaner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    tables
    ipython
    gvar
    lsqfit

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    leaner = fitter.leaner:main
